Implement document level session assignment